# TEXT-Utils

./: Dockerfile  README.md  pyproject.toml
docs/: runbook.md
docs/adr/: 0001-eval-gate-before-release.md
mysite/: settings.py  urls.py  views.py
src/agentic_mlops_foundry/: __init__.py  api.py  eval_gate.py  runtime.py
templates/: analyze.html  index.html
tests/: test_service.py
